# smart_application_manager

./: Dockerfile  README.md  main.py  pyproject.toml
app/: config.py  main.py  models.py
app/adapters/: http_client.py  rabbitmq.py
app/services/: card_request_service.py
app/utils/: logging.py
