[tool.poetry]
name = "card-request-service"
version = "0.1.0"
description = "Card request processing service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aio-pika = "^8.0.3"
aiohttp = "^3.8.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
